<resources>
    <string name="app_name">LightApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="registration_name">Name</string>
    <string name="registration_lname">Last name</string>
    <string name="registration_city">City</string>
    <string name="registration_age">Age</string>
    <string name="registration_occupation">Occupation</string>
    <string name="clickabletext_accept">Accept</string>
    <string name="clickabletext_cancel">Cancel</string>
</resources>
